# OBS-ChapterMarker

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
.github/workflows/: cmake.yml
cmake/: ObsPluginHelpers.cmake
obs/: obs.exp  obs.lib
src/: plugin-main.cc  plugin-main.cpp  plugin-main.hpp  remux.c  remux.h
